--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -377,6 +377,7 @@
     <file>ui/views/App/Settings/SettingsSipAccountsEdit.qml</file>
     <file>ui/views/App/Settings/SettingsSipAccounts.js</file>
     <file>ui/views/App/Settings/SettingsSipAccounts.qml</file>
+    <file>ui/views/App/Settings/SettingsUi.js</file>
     <file>ui/views/App/Settings/SettingsUi.qml</file>
     <file>ui/views/App/Settings/SettingsVideo.js</file>
     <file>ui/views/App/Settings/SettingsVideoPreview.qml</file>
