--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -192,6 +192,7 @@
     <file>ui/modules/Common/Form/Fields/NumericField.qml</file>
     <file>ui/modules/Common/Form/Fields/PasswordField.qml</file>
     <file>ui/modules/Common/Form/Fields/PortField.qml</file>
+    <file>ui/modules/Common/Form/Fields/ScrollableListViewField.qml</file>
     <file>ui/modules/Common/Form/Fields/TextAreaField.qml</file>
     <file>ui/modules/Common/Form/Fields/TextField.qml</file>
     <file>ui/modules/Common/Form/+linux/SearchBox.qml</file>
