--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -355,6 +355,7 @@
     <file>ui/views/App/Calls/CallsWindow.js</file>
     <file>ui/views/App/Calls/CallsWindow.qml</file>
     <file>ui/views/App/Calls/ConferenceManager.qml</file>
+    <file>ui/views/App/Calls/Conference.qml</file>
     <file>ui/views/App/Calls/EndedCall.qml</file>
     <file>ui/views/App/Calls/IncallFullscreenWindow.qml</file>
     <file>ui/views/App/Calls/Incall.js</file>
