--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -297,6 +297,7 @@
     <file>ui/modules/Linphone/Calls/Calls.js</file>
     <file>ui/modules/Linphone/Calls/Calls.qml</file>
     <file>ui/modules/Linphone/Calls/CallStatistics.qml</file>
+    <file>ui/modules/Linphone/Calls/ConferenceControls.qml</file>
     <file>ui/modules/Linphone/Chat/Chat.js</file>
     <file>ui/modules/Linphone/Chat/Chat.qml</file>
     <file>ui/modules/Linphone/Chat/Event.qml</file>
