--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -358,6 +358,7 @@
     <file>ui/views/App/Calls/CallsWindow.qml</file>
     <file>ui/views/App/Calls/ConferenceManager.qml</file>
     <file>ui/views/App/Calls/Conference.qml</file>
+    <file>ui/views/App/Calls/Dialogs/CallTransfer.qml</file>
     <file>ui/views/App/Calls/EndedCall.qml</file>
     <file>ui/views/App/Calls/IncallFullscreenWindow.qml</file>
     <file>ui/views/App/Calls/Incall.js</file>
@@ -408,6 +409,7 @@
     <file>ui/views/App/Styles/Calls/CallsWindowStyle.qml</file>
     <file>ui/views/App/Styles/Calls/ConferenceManagerStyle.qml</file>
     <file>ui/views/App/Styles/Calls/ConferenceStyle.qml</file>
+    <file>ui/views/App/Styles/Calls/Dialogs/CallTransferStyle.qml</file>
     <file>ui/views/App/Styles/Main/AboutStyle.qml</file>
     <file>ui/views/App/Styles/Main/Assistant/ActivateLinphoneSipAccountWithEmailStyle.qml</file>
     <file>ui/views/App/Styles/Main/Assistant/AssistantAbstractViewStyle.qml</file>
