--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -243,6 +243,8 @@
     <file>ui/modules/Common/Menus/DropDownDynamicMenu.qml</file>
     <file>ui/modules/Common/Menus/DropDownStaticMenuEntry.qml</file>
     <file>ui/modules/Common/Menus/DropDownStaticMenu.qml</file>
+    <file>ui/modules/Common/Menus/MenuItem.qml</file>
+    <file>ui/modules/Common/Menus/Menu.qml</file>
     <file>ui/modules/Common/Misc/Borders.qml</file>
     <file>ui/modules/Common/Misc/Collapse.qml</file>
     <file>ui/modules/Common/Misc/ForceScrollBar.qml</file>
@@ -281,6 +283,8 @@
     <file>ui/modules/Common/Styles/Indicators/VuMeterStyle.qml</file>
     <file>ui/modules/Common/Styles/Menus/ApplicationMenuStyle.qml</file>
     <file>ui/modules/Common/Styles/Menus/DropDownStaticMenuStyle.qml</file>
+    <file>ui/modules/Common/Styles/Menus/MenuItemStyle.qml</file>
+    <file>ui/modules/Common/Styles/Menus/MenuStyle.qml</file>
     <file>ui/modules/Common/Styles/Misc/CollapseStyle.qml</file>
     <file>ui/modules/Common/Styles/Misc/ForceScrollBarStyle.qml</file>
     <file>ui/modules/Common/Styles/Misc/PanedStyle.qml</file>
@@ -310,6 +314,7 @@
     <file>ui/modules/Linphone/Chat/FileMessage.qml</file>
     <file>ui/modules/Linphone/Chat/IncomingMessage.qml</file>
     <file>ui/modules/Linphone/Chat/Message.js</file>
+    <file>ui/modules/Linphone/Chat/MessageMenu.qml</file>
     <file>ui/modules/Linphone/Chat/Message.qml</file>
     <file>ui/modules/Linphone/Chat/OutgoingMessage.qml</file>
     <file>ui/modules/Linphone/Codecs/CodecAttribute.qml</file>
