Add update_sign icon and use it in new version available notification.

--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -183,6 +183,7 @@
     <file>assets/images/transfer_hovered.svg</file>
     <file>assets/images/transfer_normal.svg</file>
     <file>assets/images/transfer_pressed.svg</file>
+    <file>assets/images/update_sign.svg</file>
     <file>assets/images/video_call_accept_hovered.svg</file>
     <file>assets/images/video_call_accept_normal.svg</file>
     <file>assets/images/video_call_accept_pressed.svg</file>
