--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -370,6 +370,7 @@
     <file>ui/views/App/Calls/Dialogs/CallTransfer.qml</file>
     <file>ui/views/App/Calls/Dialogs/ConferenceManager.qml</file>
     <file>ui/views/App/Calls/EndedCall.qml</file>
+    <file>ui/views/App/Calls/IncallAvatar.qml</file>
     <file>ui/views/App/Calls/IncallFullscreenWindow.qml</file>
     <file>ui/views/App/Calls/Incall.js</file>
     <file>ui/views/App/Calls/Incall.qml</file>
