feat(ui/modules/Linphone/Chat/FileMessage): provide a download icon

--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -82,6 +82,7 @@
     <file>assets/images/delete_hovered.svg</file>
     <file>assets/images/delete_normal.svg</file>
     <file>assets/images/delete_pressed.svg</file>
+    <file>assets/images/download.svg</file>
     <file>assets/images/drop_down.svg</file>
     <file>assets/images/edit_hovered.svg</file>
     <file>assets/images/edit_normal.svg</file>
