--- a/resources.qrc
+++ b/resources.qrc
@@ -60,6 +60,10 @@
     <file>assets/images/chat_delivered.svg</file>
     <file>assets/images/chat_error.svg</file>
     <file>assets/images/chat_hovered.svg</file>
+    <file>assets/images/chat_is_composing_0.svg</file>
+    <file>assets/images/chat_is_composing_1.svg</file>
+    <file>assets/images/chat_is_composing_2.svg</file>
+    <file>assets/images/chat_is_composing_3.svg</file>
     <file>assets/images/chat_normal.svg</file>
     <file>assets/images/chat_pressed.svg</file>
     <file>assets/images/chat_read.svg</file>
