fix(resources.qrc): add `settings_video_normal.svg` file

--- a/resources.qrc
+++ b/resources.qrc
@@ -169,6 +169,7 @@
     <file>assets/images/settings_network_selected.svg</file>
     <file>assets/images/settings_sip_accounts_normal.svg</file>
     <file>assets/images/settings_sip_accounts_selected.svg</file>
+    <file>assets/images/settings_video_normal.svg</file>
     <file>assets/images/settings_video_selected.svg</file>
     <file>assets/images/snapshot_sign.svg</file>
     <file>assets/images/speaker_off_hovered.svg</file>
