feat(ui/modules/Linphone/TelKeypad): supports keyboard (close #106)

--- a/resources.qrc
+++ b/resources.qrc
@@ -368,6 +368,7 @@
     <file>ui/modules/Linphone/Styles/Timeline/TimelineStyle.qml</file>
     <file>ui/modules/Linphone/Styles/View/SipAddressesViewStyle.qml</file>
     <file>ui/modules/Linphone/TelKeypad/TelKeypadButton.qml</file>
+    <file>ui/modules/Linphone/TelKeypad/TelKeypad.js</file>
     <file>ui/modules/Linphone/TelKeypad/TelKeypad.qml</file>
     <file>ui/modules/Linphone/Timeline/Timeline.js</file>
     <file>ui/modules/Linphone/Timeline/Timeline.qml</file>
