--- a/resources.qrc
+++ b/resources.qrc
@@ -196,6 +196,7 @@
     <file>assets/images/video_call_accept_hovered.svg</file>
     <file>assets/images/video_call_accept_normal.svg</file>
     <file>assets/images/video_call_accept_pressed.svg</file>
+    <file>assets/images/video_call_disabled.svg</file>
     <file>assets/images/video_call_hovered.svg</file>
     <file>assets/images/video_call_normal.svg</file>
     <file>assets/images/video_call_pressed.svg</file>
