--- a/resources.qrc
+++ b/resources.qrc
@@ -193,6 +193,7 @@
     <file>assets/images/transfer_normal.svg</file>
     <file>assets/images/transfer_pressed.svg</file>
     <file>assets/images/update_sign.svg</file>
+    <file>assets/images/video_call_accept_disabled.svg</file>
     <file>assets/images/video_call_accept_hovered.svg</file>
     <file>assets/images/video_call_accept_normal.svg</file>
     <file>assets/images/video_call_accept_pressed.svg</file>
