chore(icons): use generic name for icons

--- a/resources.qrc
+++ b/resources.qrc
@@ -12,6 +12,7 @@
     <file>assets/images/add_hovered.svg</file>
     <file>assets/images/add_normal.svg</file>
     <file>assets/images/add_pressed.svg</file>
+    <file>assets/images/app_logo.svg</file>
     <file>assets/images/attachment_disabled.svg</file>
     <file>assets/images/attachment_hovered.svg</file>
     <file>assets/images/attachment_normal.svg</file>
@@ -125,7 +126,6 @@
     <file>assets/images/led_orange.svg</file>
     <file>assets/images/led_red.svg</file>
     <file>assets/images/led_white.svg</file>
-    <file>assets/images/linphone_logo.svg</file>
     <file>assets/images/message_sign.svg</file>
     <file>assets/images/micro_off_hovered.svg</file>
     <file>assets/images/micro_off_normal.svg</file>
