feat(Colors): remove some colors

--- a/resources.qrc
+++ b/resources.qrc
@@ -184,6 +184,7 @@
     <file>assets/images/tel_keypad_hovered.svg</file>
     <file>assets/images/tel_keypad_normal.svg</file>
     <file>assets/images/tel_keypad_pressed.svg</file>
+    <file>assets/images/timeline_history.svg</file>
     <file>assets/images/tooltip_arrow_bottom.svg</file>
     <file>assets/images/tooltip_arrow_left.svg</file>
     <file>assets/images/tooltip_arrow_right.svg</file>
