--- a/resources.qrc
+++ b/resources.qrc
@@ -199,6 +199,7 @@
     <file>assets/images/video_call_hovered.svg</file>
     <file>assets/images/video_call_normal.svg</file>
     <file>assets/images/video_call_pressed.svg</file>
+    <file>assets/images/warning.svg</file>
     <file>ui/modules/Common/Animations/BusyIndicator.qml</file>
     <file>ui/modules/Common/Constants/Constants.qml</file>
     <file>ui/modules/Common/Dialog/ConfirmDialog.qml</file>
