--- a/resources.qrc
+++ b/resources.qrc
@@ -478,5 +478,7 @@
         <file>ui/views/App/Styles/Settings/SettingsWindowStyle.qml</file>
         <file>assets/images/linphone_logo.svg</file>
         <file>ui/views/App/Main/MainWindowTopMenuBar.qml</file>
+        <file>ui/dev-modules/Colors/Colors.qml</file>
+        <file>ui/dev-modules/Units/Units.qml</file>
     </qresource>
 </RCC>
