- Update Settings navigation, add placeholders to fields, auto-update server address with the selected protocol - Set to TLS if transport cannot be defined - Add Title to MenuBar and console info if SystemTray is unavailable - Fix setting icon in qrc for future using - Add old CPACK in CMake

--- a/resources.qrc
+++ b/resources.qrc
@@ -480,5 +480,6 @@
         <file>ui/views/App/Main/MainWindowTopMenuBar.qml</file>
         <file>ui/dev-modules/Colors/Colors.qml</file>
         <file>ui/dev-modules/Units/Units.qml</file>
+        <file>assets/icon.ico</file>
     </qresource>
 </RCC>
